[package]
name = "prisoners"
version = "0.1.0"
authors = ["Maximilian Negedly"]
edition = "2024"
description = "A simple program to numerically approximate the solution to the 100 prisoners problem"

[dependencies]
rand = "0.10.0"
num_cpus = "1.17.0"
clap = {version = "4.6.0", features = ["derive"]}
